# xscope_fileio

./: settings.yml  setup.py
doc/: 00_quickstart.rst
host/: CMakeLists.txt  xscope_io_host.c
tests/stdio_vs_xscope_fileio/: CMakeLists.txt  README.rst  run_example.py
tests/stdio_vs_xscope_fileio/src/: main.c  mapfile.xc
xscope_fileio/: __init__.py  config.xscope  xscope_io_common.h
xscope_fileio/api/: xscope_io_device.h
xscope_fileio/src/: xscope_io_device.c
